--- a/KnikLandscaping/Views/Shared/_Layout.cshtml
+++ b/KnikLandscaping/Views/Shared/_Layout.cshtml
@@ -40,9 +40,15 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <div id="footer" class="container-fluid ">
+            <div class="navbar navbar-inverse navbar-fixed-bottom )">
+                <h4 class="text-center">&copy; 2017 - KnikLandscaping</h4>
+            </div>
+        </div>
+
+        @*<footer>
             <p>&copy; 2018 - KnikLandscaping</p>
-        </footer>
+        </footer>*@
     </div>
 
     <environment include="Development">
